align fix

--- a/assignment-2.css
+++ b/assignment-2.css
@@ -37,6 +37,13 @@ header {
   color: rgb(0, 0, 0);
 }
 
+.container{
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
+
 /*----------------------
  nav section styles 
  ---------------------*/
@@ -138,7 +145,6 @@ a {
 .feature {
   display: flex;
   margin: 50px auto;
-  margin-top: 100px;
   align-items: center;
   gap: 200px;
   width: 80%;
@@ -147,6 +153,10 @@ a {
 .title {
   border-left: 5px solid #FF900E;
   margin-bottom: 15px;
+}
+
+.title h2{
+  margin-left: 5px;
 }
 
 .blog-content {
@@ -189,17 +199,21 @@ a {
 achievement section styles
 -------------------------- */
 
+.achievement{
+  margin: 0px auto 0px auto;
+  width: 80%;
+}
+
 
 .achievement-content {
   width: 80%;
-  margin: auto 10%;
 }
 
 .achievement-gallery {
   display: flex;
   justify-content: center;
   gap: 100px;
-  margin-bottom: 25px;
+  margin-bottom: 50px;
 
 }
 
@@ -239,15 +253,22 @@ achievement section styles
 Sponsors section
 --------------------- */
 
+.sponsors{
+  margin: 20px auto 20px auto;
+  width: 80%;
+}
+
 .sponsor-content {
   text-align: center;
-  margin: 80px;
+  
+
 }
 
 .s-images {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  margin-top: 20px;
 }
 
 /* -----------------
@@ -259,8 +280,6 @@ about us section
   margin-top: 50px;
   display: flex;
   justify-content: space-around;
-  padding: 50px;
-  margin: 80px;
 }
 
 .contact-content {
@@ -294,11 +313,10 @@ footer section
 --------------- */
 
 footer {
-  /* width: 80%; */
-  margin: auto 6%;
-  padding: 20px;
   text-align: center;
   background-color: rgba(255, 156, 189, 0.655);
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 
@@ -320,6 +338,7 @@ footer {
   ul {
     flex-direction: column;
     text-align: center;
+    padding: 0px;
   }
 
   img {
@@ -371,7 +390,7 @@ footer {
   }
 
   .btn-Experience button {
-    margin: 0;
+    margin-top: 10px;
   }
 
   .achievement-gallery {
@@ -388,9 +407,10 @@ footer {
 
   .contact-us {
     flex-direction: column;
-    align-items: center;
-    margin: 0;
+    text-align: center;
+    margin: auto;
     padding: 10px;
+    width: 90%;
 
   }
 
@@ -399,8 +419,14 @@ footer {
 
   }
 
+  .social-icons{
+    justify-content: center;
+  }
+
   .subscribe {
     width: 100%;
+    justify-content: center;
+    
   }
 
   .footer {
